{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 16,
  "lineage": "25c71752-3487-339d-3432-b6a44806c5e3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022705868532:vpc/vpc-029d60b71bb0bd543",
            "cidr_block": "10.126.68.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01bda24e8a7d55c11",
                "cidr_block": "10.126.68.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-8f04f7f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Main_Dev_App_VPC"
                ]
              }
            ],
            "id": "vpc-029d60b71bb0bd543",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dfd12f743530e5a2",
            "owner_id": "022705868532",
            "state": "available",
            "tags": {
              "Name": "Main_Dev_App_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws_ecs_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:loadbalancer/app/Sym-Kan-Dev-WebApp-ELB/6b477ab58685ed00",
            "arn_suffix": "app/Sym-Kan-Dev-WebApp-ELB/6b477ab58685ed00",
            "dns_name": "internal-Sym-Kan-Dev-WebApp-ELB-1019652322.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:022705868532:loadbalancer/app/Sym-Kan-Dev-WebApp-ELB/6b477ab58685ed00",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Sym-Kan-Dev-WebApp-ELB",
            "security_groups": [
              "sg-06b75e52a1e1d3449"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0596b03aaa6c35d59"
              },
              {
                "subnet_id": "subnet-0759537484dd6cb76"
              }
            ],
            "subnets": [
              "subnet-0596b03aaa6c35d59",
              "subnet-0759537484dd6cb76"
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "vpc_id": "vpc-029d60b71bb0bd543",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "listener_rule",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:targetgroup/Sym-Kan-Dev-WebApp-trace/9f669611989b5145",
            "arn_suffix": "targetgroup/Sym-Kan-Dev-WebApp-trace/9f669611989b5145",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/traceapi/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:022705868532:targetgroup/Sym-Kan-Dev-WebApp-trace/9f669611989b5145",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-Dev-WebApp-trace",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-029d60b71bb0bd543"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:targetgroup/Sym-Kan-Dev-WebApp-webapp/2c0b05a3de02cd6d",
            "arn_suffix": "targetgroup/Sym-Kan-Dev-WebApp-webapp/2c0b05a3de02cd6d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:022705868532:targetgroup/Sym-Kan-Dev-WebApp-webapp/2c0b05a3de02cd6d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-Dev-WebApp-webapp",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-029d60b71bb0bd543"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "httptohttps",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:listener/app/Sym-Kan-Dev-WebApp-ELB/6b477ab58685ed00/43fdd9cccc5be16a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:022705868532:listener/app/Sym-Kan-Dev-WebApp-ELB/6b477ab58685ed00/43fdd9cccc5be16a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:022705868532:loadbalancer/app/Sym-Kan-Dev-WebApp-ELB/6b477ab58685ed00",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022705868532:security-group/sg-06b75e52a1e1d3449",
            "description": "Security Group for ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b75e52a1e1d3449",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Sym-Kan-Dev-WebApp-SG",
            "name_prefix": null,
            "owner_id": "022705868532",
            "revoke_rules_on_delete": false,
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "SG",
              "service_role": "ECS"
            },
            "timeouts": null,
            "vpc_id": "vpc-029d60b71bb0bd543"
          }
        }
      ]
    }
  ]
}